--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "dotenv": "^8.0.0",
     "firebase-admin": "^8.3.0",
+    "moment": "^2.24.0",
     "tmi.js": "^1.4.5"
   },
   "devDependencies": {
