--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "twich-irc-bot",
   "version": "1.0.0",
   "description": "",
+  "engineStrict": true,
+  "engines": {
+    "node": "12.9.1"
+  },
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -12,18 +16,19 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
-    "dotenv": "^8.0.0",
-    "firebase-admin": "^8.3.0",
+    "dotenv": "^8.1.0",
+    "firebase-admin": "^8.4.0",
     "moment": "^2.24.0",
     "tmi.js": "^1.4.5"
   },
   "devDependencies": {
-    "eslint": "^6.1.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.2.2",
     "eslint-config-standard": "^13.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-standard": "^4.0.1",
     "nodemon": "^1.19.1"
   }
 }
