--- a/package.json
+++ b/package.json
@@ -9,26 +9,25 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "stream": "node src/stream.js"
+    "dev": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
-    "firebase-admin": "^8.8.0",
-    "moment": "^2.25.3",
+    "eslint": "^7.6.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-node": "^11.1.0",
+    "firebase-admin": "^9.0.0",
+    "moment": "^2.27.0",
+    "nodemon": "^2.0.4",
     "tmi.js": "^1.5.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.2",
-    "eslint-config-standard": "^13.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^9.2.0",
+    "babel-eslint": "^10.1.0",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "nodemon": "^1.19.4"
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
