--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "dotenv": "^8.2.0",
-    "eslint": "^7.16.0",
-    "eslint-config-standard": "^16.0.2",
+    "dotenv": "^10.0.0",
+    "eslint": "^7.27.0",
+    "eslint-config-standard": "^16.0.3",
     "eslint-plugin-node": "^11.1.0",
-    "firebase-admin": "^9.4.2",
+    "eslint-plugin-standard": "^5.0.0",
+    "firebase-admin": "^9.9.0",
     "moment": "^2.29.1",
-    "nodemon": "^2.0.6",
-    "tmi.js": "^1.7.1"
+    "nodemon": "^2.0.7",
+    "tmi.js": "^1.8.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.1.0"
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-promise": "^5.1.0"
   }
 }
