--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "axios-rate-limit": "^1.3.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.27.0",
     "eslint-config-standard": "^16.0.3",
