--- a/package.json
+++ b/package.json
@@ -17,18 +17,12 @@
     "axios": "^0.21.1",
     "axios-rate-limit": "^1.3.0",
     "dotenv": "^10.0.0",
-    "eslint": "^7.27.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-standard": "^5.0.0",
     "firebase-admin": "^9.9.0",
     "moment": "^2.29.1",
-    "nodemon": "^2.0.7",
-    "tmi.js": "^1.8.3"
+    "tmi.js": "^1.8.4"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-promise": "^5.1.0"
+    "eslint": "^7.32.0",
+    "nodemon": "^2.0.12"
   }
 }
