--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,20 @@
 AUTH_PROVIDER_CERT_URL=
 AUTH_URI=
-BOT_USERNAME=
-CHANNEL_NAME=
+
 CLIENT_CERT_URL=
 CLIENT_EMAIL=
 CLIENT_ID=
-INTERVAL_VALUE=
-OAUTH_TOKEN=
-PAPERTRAIL_API_TOKEN=
+
 PRIVATE_KEY=
 PRIVATE_KEY_ID=
 PROJECT_ID=
-TOKEN_URI=
+
 TWITCH_API_URL=
 TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
-TYPE=
-TZ=
-UPDATE_INTERVAL=
+
+TYPE=service_account
+TZ=America/New_York
+
+CHANNEL_NAME=
 USER_ID=
-USER_LOGIN=
