--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.1",
     "firebase-admin": "^10.2.0",
     "moment": "^2.29.3",
+    "raygun": "^0.13.2",
     "tmi.js": "^1.8.5"
   },
   "devDependencies": {
