--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.2",
+    "axios": "^1.5.0",
     "axios-rate-limit": "^1.3.0",
-    "dotenv": "^16.0.3",
-    "firebase-admin": "^11.4.1",
+    "dotenv": "^16.3.1",
+    "firebase-admin": "^11.10.1",
     "moment": "^2.29.4",
     "tmi.js": "^1.8.5"
   },
   "devDependencies": {
-    "eslint": "^8.31.0",
-    "nodemon": "^2.0.20"
+    "@flydotio/dockerfile": "^0.4.10",
+    "eslint": "^8.49.0",
+    "nodemon": "^3.0.1"
   }
 }
