--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
   "name": "twich-irc-bot",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node dist/index.js",
+    "dev": "nodemon dist/index.js",
+    "build": "tsc",
     "deploy": "flyctl deploy"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.5",
+    "axios": "^1.6.6",
     "axios-rate-limit": "^1.3.0",
-    "dotenv": "^16.3.2",
+    "dayjs": "^1.11.10",
+    "dotenv": "^16.4.1",
     "firebase-admin": "^12.0.0",
-    "moment": "^2.30.1",
     "tmi.js": "^1.8.5"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.0",
+    "@types/tmi.js": "^1.8.6",
     "eslint": "^8.56.0",
     "nodemon": "^3.0.3"
   }
