--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "twich-irc-bot",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "nodemon dist/index.js",
+    "start": "node dist/app.js",
+    "dev": "nodemon dist/app.js",
     "build": "tsc",
     "deploy": "flyctl deploy"
   },
