--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@flydotio/dockerfile": "^0.5.0",
     "@types/tmi.js": "^1.8.6",
     "eslint": "^8.56.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "typescript": "^5.3.3"
   }
 }
