--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,8 @@
-AUTH_PROVIDER_CERT_URL=
-AUTH_URI=
+USER_ID= 
+CHANNEL_NAME= 
 
-CLIENT_CERT_URL=
-CLIENT_EMAIL=
-CLIENT_ID=
+TWITCH_API_URL= 
+TWITCH_CLIENT_ID= 
+TWITCH_CLIENT_SECRET= 
 
-PRIVATE_KEY=
-PRIVATE_KEY_ID=
-PROJECT_ID=
-
-TWITCH_API_URL=
-TWITCH_CLIENT_ID=
-TWITCH_CLIENT_SECRET=
-
-TYPE=service_account
-TZ=America/New_York
-
-CHANNEL_NAME=
-USER_ID=
+GOOGLE_CREDS=
