--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/app.js",
   "scripts": {
     "start": "node dist/app.js",
-    "dev": "nodemon dist/app.js",
+    "dev": "nodemon src/app.ts",
     "build": "tsc",
     "deploy": "flyctl deploy"
   },
@@ -25,6 +25,7 @@
     "@types/tmi.js": "^1.8.6",
     "eslint": "^8.57.0",
     "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   }
 }
