--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "axios-rate-limit": "^1.4.0",
-    "dayjs": "^1.11.11",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
-    "firebase-admin": "^12.1.1",
+    "firebase-admin": "^12.5.0",
     "tmi.js": "^1.8.5"
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.5.7",
-    "@tsconfig/recommended": "^1.0.6",
-    "@types/node": "^22.1.0",
+    "@antfu/eslint-config": "^3.7.1",
+    "@flydotio/dockerfile": "^0.5.8",
+    "@tsconfig/recommended": "^1.0.7",
+    "@types/node": "^22.5.5",
     "@types/tmi.js": "^1.8.6",
-    "eslint": "^9.4.0",
-    "nodemon": "^3.1.3",
+    "eslint": "^9.11.0",
+    "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.6.2"
   }
 }
