--- a/package.json
+++ b/package.json
@@ -22,13 +22,11 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.17.0",
-    "@flydotio/dockerfile": "^0.7.10",
-    "@tsconfig/recommended": "^1.0.10",
+    "@tsconfig/node22": "^22.0.2",
     "@types/node": "^24.0.13",
     "@types/tmi.js": "^1.8.6",
     "eslint": "^9.31.0",
     "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
